--- a/index.html
+++ b/index.html
@@ -1,160 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>My Bbu ❤️</title>
+  <meta charset="UTF-8">
+  <title>Bbu & Lucky ❤️</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      text-align: center;
+      color: #fff;
+    }
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins&display=swap" rel="stylesheet">
+    h1 {
+      margin-top: 30px;
+      font-size: 36px;
+    }
 
-<style>
-body{
-margin:0;
-font-family:Poppins;
-background:linear-gradient(135deg,#ff758c,#ff7eb3);
-text-align:center;
-color:#333;
-}
+    .container {
+      padding: 20px;
+    }
 
-h1{
-font-family:Great Vibes;
-font-size:55px;
-color:#8b0039;
-margin-top:25px;
-}
+    .love-text {
+      font-size: 18px;
+      margin: 20px;
+      line-height: 1.6;
+    }
 
-.section{
-padding:25px 15px;
-}
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 15px;
+      padding: 20px;
+    }
 
-.box{
-background:white;
-margin:20px;
-padding:25px;
-border-radius:25px;
-box-shadow:0 6px 20px rgba(0,0,0,0.2);
-}
+    .gallery img {
+      width: 100%;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
 
-.gallery{
-display:grid;
-grid-template-columns:repeat(2,1fr);
-gap:15px;
-}
+    .proposal {
+      background: rgba(255,255,255,0.2);
+      padding: 20px;
+      border-radius: 20px;
+      margin: 20px;
+    }
 
-.gallery img{
-width:100%;
-border-radius:20px;
-box-shadow:0 5px 12px rgba(0,0,0,0.3);
-transition:0.3s;
-}
-
-.gallery img:hover{
-transform:scale(1.05);
-}
-
-button{
-background:#8b0039;
-color:white;
-border:none;
-padding:15px 30px;
-font-size:20px;
-border-radius:30px;
-cursor:pointer;
-box-shadow:0 5px 15px rgba(0,0,0,0.3);
-}
-
-footer{
-padding:18px;
-font-size:14px;
-color:#555;
-}
-</style>
+    footer {
+      margin: 30px 0;
+      font-size: 16px;
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>For My Bbu ❤️</h1>
-<p>From Lucky, With True Love 💕</p>
+  <h1>My Beautiful Bbu ❤️</h1>
 
-<!-- Gallery -->
-<div class="section box">
-<h2>My Beautiful Urvashi 💖</h2>
+  <div class="container">
 
-<div class="gallery">
-<img src="photo1.jpg">
-<img src="photo2.jpg">
-<img src="photo3.jpg">
-<img src="photo4.jpg">
-<img src="photo5.jpg">
-<img src="photo6.jpg">
-<img src="photo7.jpg">
-<img src="photo8.jpg">
-</div>
-</div>
+    <div class="love-text">
+      Dear Urvashi (My Bbu) 💖,<br><br>
 
-<!-- Love Letter -->
-<div class="section box">
-<h2>My Heart Letter 💌</h2>
+      Pichhle 1 saal se tum meri life ka sabse special hissa ho 🥰  
+      Tumhari smile, tumhari baatein, tumhara care — sab kuch mere liye priceless hai ❤️<br><br>
 
-<p>
-Dear Bbu ❤️<br><br>
+      Mujhe pata hai aaj mere paas zyada paise nahi hain 😔  
+      Par mera pyaar, loyalty aur mehnat kabhi kam nahi hogi 💪💞<br><br>
 
-Tum meri life ki sabse beautiful feeling ho 💖<br>
-Tumhari ek smile meri saari thakan mita deti hai ✨<br><br>
+      Main promise karta hoon ki main tumhe hamesha khush rakhunga 💍  
+      Har mushkil me tumhara saath dunga 🤝<br><br>
 
-Aaj shayad mere paas zyada paise nahi hain,<br>
-par mera pyaar, loyalty aur mehnat unlimited hai 💪❤️<br><br>
+      Will you be my forever, Bbu? 💖
+    </div>
 
-Main wada karta hoon ki ek din<br>
-main tumhara dream life banaunga,<br>
-jisme sirf khushi hogi 💍
-</p>
-</div>
+    <div class="gallery">
+      <img src="photo1.jpg">
+      <img src="photo2.jpg">
+      <img src="photo3.jpg">
+      <img src="photo4.jpg">
+      <img src="photo5.jpg">
+      <img src="photo6.jpg">
+      <img src="photo7.jpg">
+      <img src="photo8.jpg">
+    </div>
 
-<!-- Promise -->
-<div class="section box">
-<h2>My Promise 🤞</h2>
+    <div class="proposal">
+      <h2>💍 I Love You Bbu 💍</h2>
+      <p>
+        Lucky always yours ❤️<br>
+        Today, Tomorrow & Forever 💕
+      </p>
+    </div>
 
-<p>
-Main tumhara hamesha respect karunga ❤️<br>
-Tumhari care karunga 💕<br>
-Tumhe kabhi akela feel nahi hone dunga 💪<br><br>
+  </div>
 
-Lucky + Bbu = Forever ♾️
-</p>
-</div>
-
-<!-- Dream Wedding -->
-<div class="section box">
-<h2>Our Dream Wedding 💍</h2>
-
-<p>
-Ek din hum dono shaadi karenge 💖<br>
-Tum white/red dress me queen lagogi 👑<br>
-Main tumhara haath pakad kar kahunga —<br>
-"I’m lucky to have you" ❤️<br><br>
-
-Phir hum apni small si happy family banayenge 🏡💕
-</p>
-</div>
-
-<!-- Proposal -->
-<div class="section box">
-<h2>Will You Marry Me? 💍</h2>
-
-<p>Bbu, kya tum meri life partner banogi? ❤️</p>
-
-<button onclick="yesLove()">YES 💖</button>
-</div>
-
-<footer>
-Only For My Queen 👑 — Lucky 💕
-</footer>
-
-<script>
-function yesLove(){
-alert("Thank You Bbu ❤️💍\nI Promise You A Beautiful Life 😘");
-}
-</script>
+  <footer>
+    Made with 💖 by Lucky for Urvashi
+  </footer>
 
 </body>
 </html>
